--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     tools:context=".ui.GameActivity">
-
+<!--
     <com.non_android_programmers.responsivegui.ResponsiveRelativeLayout
         android:layout_width="64dp"
         android:layout_height="64dp"
@@ -66,31 +66,25 @@
             android:layout_height="50dp"
             android:src="@drawable/char_m_40" />
 
-    </com.non_android_programmers.responsivegui.ResponsiveRelativeLayout>
+    </com.non_android_programmers.responsivegui.ResponsiveRelativeLayout> -->
+
+    <com.non_android_programmers.responsivegui.ResponsiveImageView
+        android:layout_marginLeft="170.5dp"
+        android:layout_marginTop="8dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:src="@drawable/char_m_40" />
 
     <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
         android:id="@+id/text_view_word_explanation"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="48dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="100dp"
         android:background="@drawable/btn_shape"
         android:backgroundTint="@color/colorA1"
         android:gravity="center"
-        android:maxLines="1"
-        android:textAlignment="center"
-        android:textSize="@dimen/text_size_medium" />
-
-    <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
-        android:id="@+id/text_view_last_q"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginTop="118dp"
-        android:background="@drawable/btn_shape"
-        android:backgroundTint="@color/colorA13"
         android:maxLines="1"
         android:textAlignment="center"
         android:textSize="@dimen/text_size_medium" />
@@ -131,23 +125,24 @@
 
     </com.non_android_programmers.responsivegui.ResponsiveRelativeLayout>
 
-    <com.non_android_programmers.responsivegui.ResponsiveRelativeLayout
+    <com.non_android_programmers.responsivegui.ResponsiveImageView
         android:id="@+id/btn_prev_q"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="250dp"
-        android:layout_marginTop="194dp"
-        android:background="@color/colorA15"
-        android:onClick="onPrevQuestion" />
+        android:layout_marginLeft="306dp"
+        android:layout_marginTop="244.5dp"
+        android:onClick="onPrevQuestion"
+        android:src="@drawable/right_arrow_1" />
 
 
-    <com.non_android_programmers.responsivegui.ResponsiveRelativeLayout
+    <com.non_android_programmers.responsivegui.ResponsiveImageView
         android:id="@+id/btn_next_q"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="194dp"
-        android:background="@color/colorA15"
-        android:onClick="onNextQuestion" />
+        android:layout_marginLeft="55dp"
+        android:layout_marginTop="244.5dp"
+        android:onClick="onNextQuestion"
+        android:src="@drawable/left_arrow_1" />
 
 
     <com.non_android_programmers.responsivegui.ResponsiveRelativeLayout
