--- a/app/src/main/res/layout/fragment_register_choose_user_name.xml
+++ b/app/src/main/res/layout/fragment_register_choose_user_name.xml
@@ -20,11 +20,12 @@
                 android:layout_height="100dp"
                 android:src="@drawable/char_m_40"
                 android:layout_marginTop="5dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"/>
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
+                android:transitionName="transition"/>
         </com.non_android_programmers.responsivegui.ResponsiveRelativeLayout>
 
-        <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
+        <com.q20.projectsummer.Custom.AutoResizeTextViewWithAfsanehFont
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:maxLines="1"
