--- a/app/src/main/res/layout/activity_win_dialog.xml
+++ b/app/src/main/res/layout/activity_win_dialog.xml
@@ -19,25 +19,32 @@
         android:onClick="doNothing">
 
         <com.non_android_programmers.responsivegui.ResponsiveImageView
+            android:layout_width="128dp"
+            android:layout_height="128dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="91.5dp"
+            android:src="@drawable/win_icon"/>
+
+        <com.non_android_programmers.responsivegui.ResponsiveImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="40.25dp"
-            android:layout_marginTop="473dp"
+            android:layout_marginTop="468dp"
             android:src="@drawable/share_icon" />
 
         <com.non_android_programmers.responsivegui.ResponsiveImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="130.5dp"
-            android:layout_marginTop="473dp"
+            android:layout_marginTop="468dp"
             android:src="@drawable/plus_icon" />
 
         <com.non_android_programmers.responsivegui.ResponsiveImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="220.75dp"
-            android:layout_marginTop="473dp"
-            android:src="@drawable/right-arrow" />
+            android:layout_marginTop="468dp"
+            android:src="@drawable/right_arrow" />
 
 
     </com.non_android_programmers.responsivegui.ResponsiveRelativeLayout>
