mohammadmahdi adding chert o pert to registeration start file

--- a/app/src/main/res/layout/fragment_new_game.xml
+++ b/app/src/main/res/layout/fragment_new_game.xml
@@ -44,6 +44,12 @@
             android:layout_marginTop="31dp"
             android:onClick="onOnline">
 
+            <com.non_android_programmers.responsivegui.ResponsiveImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/multi_player"
+                android:layout_centerInParent="true"/>
+
         </com.non_android_programmers.responsivegui.ResponsiveRelativeLayout>
 
 
@@ -60,6 +66,12 @@
             android:layout_height="245dp"
             android:layout_marginTop="286dp"
             android:onClick="onOffline">
+
+            <com.non_android_programmers.responsivegui.ResponsiveImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/single_play"
+                android:layout_centerInParent="true"/>
 
         </com.non_android_programmers.responsivegui.ResponsiveRelativeLayout>
 
