--- a/app/src/main/res/layout/fragment_register_sign_in_orlog_in.xml
+++ b/app/src/main/res/layout/fragment_register_sign_in_orlog_in.xml
@@ -1,9 +1,39 @@
 <com.non_android_programmers.responsivegui.ResponsiveRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/sign_in_or_log_in_fragment_layout"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorA7"
     tools:context="com.q20.projectsummer.ui.RegisterSignInORLogInFragment">
+
+    <com.non_android_programmers.responsivegui.ResponsiveImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/logo"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="100dp"/>
+
+    <com.q20.projectsummer.Custom.AutoResizeTextViewWithAfsanehFont
+        android:layout_width="270dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="310dp"
+        android:layout_marginLeft="50dp"
+        android:maxLines="1"
+        android:textSize="60sp"
+        android:text="بیست سوالی"
+        android:gravity="center"
+        android:textColor="@color/cardview_light_background"/>
+
+    <com.q20.projectsummer.Custom.AutoResizeTextViewWithAfsanehFont
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="415dp"
+        android:layout_marginLeft="150dp"
+        android:maxLines="1"
+        android:textSize="20dp"
+        android:text="MAMAH Group."
+        android:gravity="center"
+        android:textColor="@color/cardview_light_background"/>
 
     <com.non_android_programmers.responsivegui.ResponsiveImageView
         android:layout_width="155dp"
